@@ -1,4 +1,6 @@
 TRUNK
+
+  - [bugfix] Running builder doesn't block the dashboard on Windows
 ------------------------------------------------------------------------------------------------------------------------
 * 0.4.0
   - pretty user interface
